--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CypherX",
+  "name": "Ethan md v1",
   "version": "1.8.0",
   "description": "The best Whatsapp bot",
   "main": "index.js",
